<resources>
    <string name="app_name">Ahmedabad Institute of Technology</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="enrollment_number">Enrollment Number</string>
    <string name="Login">Login</string>
    <string name="ahmedabad_institute_of_technology">Ahmedabad Institute of Technology</string>
    <string name="app_logo">App Logo</string>
    <string name="title_activity_bnavigation">B_navigation_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Notice board</string>
    <string name="title_notifications">Profile</string>
    <string name="profile_image" />
    <string name="title_timetable">Time table\n</string>
    <string name="title_upload">MY COURSE</string>
    <string name="select_semester">select_semester</string>
    <string name="upload_pdf">upload_pdf</string>
    <string name="timetable">Timetable</string>
    <string name="attendance">Attendance</string>
    <string name="results">Results</string>
    <string name="my_course">My course</string>
    <string name="exam_schedule">Exam schedule</string>
    <string name="events">Events</string>
    <string name="assignments">Assignments</string>
    <string name="syllbus">Syllbus</string>
</resources>