<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ahmedabadinstituteoftechnology.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_Timetable_fragment"
            app:destination="@id/Timetable_fragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_attendance"
            app:destination="@id/navigation_attendance" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_result"
            app:destination="@id/navigation_result" />
        <action
            android:id="@+id/action_navigation_home_to_assignnmentsFragment"
            app:destination="@id/assignnmentsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_eventFragment"
            app:destination="@id/eventFragment" />
        <action
            android:id="@+id/action_navigation_home_to_my_Course_Fragment"
            app:destination="@id/my_Course_Fragment" />
        <action
            android:id="@+id/action_navigation_home_to_exam_scheduleFragment"
            app:destination="@id/exam_scheduleFragment" />

    </fragment>

    <!-- Dashboard Fragment -->
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.ahmedabadinstituteoftechnology.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <!-- Notifications/Profile Fragment -->
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.ahmedabadinstituteoftechnology.ui.notifications.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <!-- Timetable Fragment -->
    <fragment
        android:id="@+id/Timetable_fragment"
        android:name="com.example.ahmedabadinstituteoftechnology.ui.home.TimetableFragment"
        android:label="@string/title_timetable"
        tools:layout="@layout/fragment_timetable" />

    <!-- attendance Fragment -->
    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.example.ahmedabadinstituteoftechnology.ui.home.AttendanceFragment"
        android:label="attendance"
        tools:layout="@layout/fragment_attendance_" />

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.example.ahmedabadinstituteoftechnology.ui.home.ResultFragment"
        android:label="Result"
        tools:layout="@layout/fragment_result" />
    <fragment
        android:id="@+id/assignnmentsFragment"
        android:name="com.example.ahmedabadinstituteoftechnology.ui.home.AssignnmentsFragment"
        android:label="fragment_assignnments"
        tools:layout="@layout/fragment_assignnments" />
    <fragment
        android:id="@+id/eventFragment"
        android:name="com.example.ahmedabadinstituteoftechnology.ui.home.EventFragment"
        android:label="fragment_event"
        tools:layout="@layout/fragment_event" />
    <fragment
        android:id="@+id/exam_scheduleFragment"
        android:name="com.example.ahmedabadinstituteoftechnology.ui.home.Exam_scheduleFragment"
        android:label="fragment_exam_schedule"
        tools:layout="@layout/fragment_exam_schedule" />
    <fragment
        android:id="@+id/my_Course_Fragment"
        android:name="com.example.ahmedabadinstituteoftechnology.ui.home.My_Course_Fragment"
        android:label="fragment_my__course_"
        tools:layout="@layout/fragment_my__course_" />
</navigation>
